css/pup.css
/* emacs color matcher: http://raebear.net/comp/emacscolors.html */

body, html
{
  font-family: helvetica;
  font-size: 100%;
  color: #aaa;
  border: none;
  margin: 0px;
  padding: 0px;
  }

a {color: #6ca6cd; text-decoration: none;} /* deep sky blue 3 */

hr
{ height: 1px;
  margin: 1em 1em 2em 0;
  text-align: center;
  border-color: #777;
  border-width: 0;
  border-style: dotted;

  }

hr:after
{
  content: "···";
  letter-spacing: 2em;
  }

.scroll-down-maybe
{
  z-index: -1;
  background-color: #262626;
  position: fixed;
  width: 100%;
  clear: both;
  height: 40px;
  bottom: 40px;
  border: none;
  }

.background
{
  z-index: -2;
  background-color: #262626;
  position: fixed;
  width: 100%;
  height: 100%;
  margin-top: 0px;
  clear: both;
  }

.scroll-down-maybe-inner
{
  margin-left: auto;
  margin-right: auto;
  height: 40px;
  background-repeat: no-repeat;
  background-position: right bottom;
  }

#output
{ margin-left: auto;
  margin-right: auto;
  border: none;
  padding: 0 20px;
  margin-bottom: 40px;
  }

.input
{ position: fixed;
  clear: both;
  width: 100%;
  height: 30px;
  bottom: 0px;
  border: none;
  padding: 10px 0 10px 0;
  background-color: #262626;
  background-image:url("/static/img/gradient.png");
  background-repeat: repeat-x;
  background-position: left bottom;
  }

.input-form
{ margin-left: auto;
  margin-right: auto;
  border: none;
  }

.input-form *
{ width:90%;
  background-color: #262626;
  color: #aaa;
  padding: 4px;
  border-width: 1px;
  border-style: solid;
  border-color: aaa;
  font-family: inherit;
  }

.timestamp
{ color: #696969;
  font-size: 0.9em;
  }

#top
{ padding-top: 20px; }

.img-txt
{ color: #696969;
  font-size: 0.9em;
  }

.title { font-size: 1.4em; }

#input-input { color: #ffa07a; /* light salmon */
               font-size: 1em; }
.eliza { padding-bottom: 28px; }
.user { padding-bottom: 12px; }
.user-input { color: #ffa07a; /* light salmon */ }
.comments { color: #696969; }
.comment-head { display: inline }
#welcome { padding-right: 50px;
           float: right;}

.some-spacing { margin-left: 10px; }

